--- a/css/jquery.scrollingShadows.css
+++ b/css/jquery.scrollingShadows.css
@@ -1,1 +1,33 @@
-.scrollShadows-overlay{z-index:100;position:absolute;left:0;pointer-events:none;background-color:transparent;background-size:100% 40px, 100% 40px, 100% 14px, 100% 14px;background-repeat:no-repeat;-webkit-transition:box-shadow 0.05s linear;-moz-transition:box-shadow 0.05s linear;-ms-transition:box-shadow 0.05s linear;-o-transition:box-shadow 0.05s linear;transition:box-shadow 0.05s linear}.scrollShadows-overlay.top{-webkit-box-shadow:inset 0 12px 12px -8px rgba(0,0,0,0),inset 0 -12px 12px -8px rgba(0,0,0,0.5);-moz-box-shadow:inset 0 12px 12px -8px rgba(0,0,0,0),inset 0 -12px 12px -8px rgba(0,0,0,0.5);box-shadow:inset 0 12px 12px -8px rgba(0,0,0,0),inset 0 -12px 12px -8px rgba(0,0,0,0.5)}.scrollShadows-overlay.middle{-webkit-box-shadow:inset 0 12px 12px -8px rgba(0,0,0,0.5),inset 0 -12px 12px -8px rgba(0,0,0,0.5);-moz-box-shadow:inset 0 12px 12px -8px rgba(0,0,0,0.5),inset 0 -12px 12px -8px rgba(0,0,0,0.5);box-shadow:inset 0 12px 12px -8px rgba(0,0,0,0.5),inset 0 -12px 12px -8px rgba(0,0,0,0.5)}.scrollShadows-overlay.bottom{-webkit-box-shadow:inset 0 12px 12px -8px rgba(0,0,0,0.5),inset 0 -12px 12px -8px rgba(0,0,0,0);-moz-box-shadow:inset 0 12px 12px -8px rgba(0,0,0,0.5),inset 0 -12px 12px -8px rgba(0,0,0,0);box-shadow:inset 0 12px 12px -8px rgba(0,0,0,0.5),inset 0 -12px 12px -8px rgba(0,0,0,0)}
+.scrollShadows-overlay
+{
+    background-color: transparent;
+    background-repeat: no-repeat;
+    background-size: 100% 40px, 100% 40px, 100% 14px, 100% 14px;
+    left: 0;
+    moz-transition: box-shadow 0.05s linear;
+    ms-transition: box-shadow 0.05s linear;
+    o-transition: box-shadow 0.05s linear;
+    pointer-events: none;
+    position: absolute;
+    transition: box-shadow 0.05s linear;
+    webkit-transition: box-shadow 0.05s linear;
+    z-index: 100;
+}
+.scrollShadows-overlay.top
+{
+    box-shadow: inset 0 12px 12px -8px rgba(0,0,0,0),inset 0 -12px 12px -8px rgba(0,0,0,0.5);
+    moz-box-shadow: inset 0 12px 12px -8px rgba(0,0,0,0),inset 0 -12px 12px -8px rgba(0,0,0,0.5);
+    webkit-box-shadow: inset 0 12px 12px -8px rgba(0,0,0,0),inset 0 -12px 12px -8px rgba(0,0,0,0.5);
+}
+.scrollShadows-overlay.middle
+{
+    box-shadow: inset 0 12px 12px -8px rgba(0,0,0,0.5),inset 0 -12px 12px -8px rgba(0,0,0,0.5);
+    moz-box-shadow: inset 0 12px 12px -8px rgba(0,0,0,0.5),inset 0 -12px 12px -8px rgba(0,0,0,0.5);
+    webkit-box-shadow: inset 0 12px 12px -8px rgba(0,0,0,0.5),inset 0 -12px 12px -8px rgba(0,0,0,0.5);
+}
+.scrollShadows-overlay.bottom
+{
+    box-shadow: inset 0 12px 12px -8px rgba(0,0,0,0.5),inset 0 -12px 12px -8px rgba(0,0,0,0);
+    moz-box-shadow: inset 0 12px 12px -8px rgba(0,0,0,0.5),inset 0 -12px 12px -8px rgba(0,0,0,0);
+    webkit-box-shadow: inset 0 12px 12px -8px rgba(0,0,0,0.5),inset 0 -12px 12px -8px rgba(0,0,0,0);
+}
